# classeq2

./: .cz.toml  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile.api  Dockerfile.cli  Dockerfile.watcher  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/domain/: mod.rs
core/src/domain/dtos/: adherence_test.rs  annotation.rs  clade.rs  clade_kmers.rs  file_or_stdin.rs  kmers_map.rs  mod.rs  msa.rs  output_format.rs  phylogeny.rs  placement_response.rs  rest_comp_strategy.rs  sequence.rs  telemetry_code.rs  tree.rs
core/src/tests/data/: tree.nwk
core/src/tests/data/colletotrichum-acutatom-complex/inputs/: Colletotrichum_acutatum_gapdh_gapsfree.fasta  Colletotrichum_acutatum_gapdh_mafft.fasta
core/src/tests/data/colletotrichum-acutatom-complex/outputs/: Colletotrichum_acutatum_gapdh-PhyML.yaml
core/src/use_cases/: map_kmers_to_tree.rs  mod.rs  place_sequence.rs
core/src/use_cases/build_database/: mod.rs
core/src/use_cases/map_kmers_to_tree/: mod.rs
core/src/use_cases/place_sequences/: _dtos.rs  clade_from_placement_status.rs  mod.rs  place_sequence.rs  update_introspection_node.rs
core/src/use_cases/shared/: mod.rs  write_or_append_to_file.rs
docs/: README.md
docs/book/: 01-installation.md  02-build-db.md  03-place-sequence-cli.md  04-configure-api-server.md  05-submit-placement-to-api.md  06-benchmark.md  06-telemetry-and-benchmark.md
docs/drawio/: algorithm.drawio  api-achitecture.drawio
ports/api/: Cargo.toml  README.md
ports/api/src/: main.rs
ports/api/src/endpoints/: fs.rs  mod.rs  subjects.rs
ports/api/src/models/: analyses_config.rs  api_config.rs  config.rs  mod.rs  node.rs
ports/cli/: Cargo.toml  README.md
ports/cli/src/: main.rs
ports/cli/src/cmds/: build_db.rs  convert.rs  describe_db.rs  io.rs  mod.rs  place_sequences.rs  utils.rs
ports/cli/src/dtos/: mod.rs  output_format.rs  telemetry_code.rs
ports/lib/: Cargo.toml  README.md
ports/lib/src/: lib.rs
ports/lib/src/functions/: get_file_by_inode.rs  load_database.rs  mod.rs
ports/lib/src/models/: analyses_config.rs  cli_launcher.rs  file_system_config.rs  log_format.rs  mod.rs  models_config.rs
ports/sched/: Cargo.toml  README.md
ports/watcher/: Cargo.toml  README.md
ports/watcher/src/: main.rs
ports/watcher/src/cmds/: mod.rs
ports/watcher/src/cmds/watch_dir/: context.rs  mod.rs
ports/watcher/src/dtos/: log_writer.rs  mod.rs  placement_result.rs  telemetry_code.rs
ports/watcher/src/models/: config_file.rs  execution_msg.rs  mod.rs  reminder.rs
scripts/: publish-all.sh  root_tree.py
settings/: config.dev.yaml  config.prod.yaml  config.yaml
telemetry/: prometheus.yml
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd7/: config.yaml  logging.jsonl  running.yaml  success.yaml
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd7/input/: bsub-refseq-sample50percentRemaining-clean-diamond.fasta
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd7/output/: result.yaml
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd8/: config.yaml  running.yaml  success.yaml
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd8/input/: bsub-refseq-sample50percentRemaining-clean-diamond.fasta
tests/data/public/019051d9-4c7a-7b2d-9dd1-66ef92236fd8/output/: result.yaml
tests/models/: bsub-gyrb-annotations.yaml  bsub-gyrb-k35.cls.json  bsub-gyrb-k35.cls.yaml
