# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace]

members = ["core", "ports/api", "ports/cli", "ports/lib", "ports/watcher"]

resolver = "2"

# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace.package]

version = "0.3.0"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/sgelias/classeq2"
readme = "README.md"
keywords = ["bioinformatics", "DNA", "placement", "phylogeny"]
categories = ["science", "command-line-interface", "command-line-utilities"]


# ? ----------------------------------------------------------------------------
# ? Workspace dependencies
# ? ----------------------------------------------------------------------------

[workspace.dependencies]

anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mycelium-base = "5.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
uuid = { version = "1.1", features = ["v3", "v4", "v7", "serde", "fast-rng"] }
walkdir = "2.5.0"
