# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace]

members = ["core", "ports/api", "ports/cli", "ports/lib", "ports/watcher"]

resolver = "2"

# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace.package]

version = "0.8.1"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/LepistaBioinformatics/classeq2"
readme = "README.md"
keywords = ["bioinformatics", "DNA", "placement", "phylogeny"]
categories = ["science", "command-line-interface", "command-line-utilities"]


# ? ----------------------------------------------------------------------------
# ? Workspace dependencies
# ? ----------------------------------------------------------------------------

[workspace.dependencies]

anyhow = "1"
apalis = { version = "0.5.3", features = [
    "cron",
    "async-std-comp",
    "tracing",
    "retry",
] }
apalis-core = { version = "0.5.3", default-features = false }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mycelium-base = "5.0"
mycelium-config = "5.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["alloc", "json", "env-filter", "tracing-serde"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "fs"] }
uuid = { version = "1.1", features = ["v3", "v4", "v7", "serde", "fast-rng"] }
walkdir = "2.5.0"
zstd = "0.13"

# Security issues
bytes = "1.7"
subtle = ">=2.6.1"
zerovec = ">=0.10.4"
zerovec-derive = ">=0.10.3"
