[package]
name = "classeq-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mycelium-base.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

phylotree = "0.1.2"
rayon = "1.10"
