[package]

name = "classeq-core"
description = "Core library for the classeq project"
readme = "../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

clap.workspace = true
mycelium-base.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

mur3 = "0.1"
phylotree = "0.1.2"
thiserror = "1.0"
dashmap = { version = "6.0", features = ["rayon", "serde"] }
